namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: website
  labels: # machine readable
    author: barbara-brugger
  annotations: # human readable
    author: Barbara Brugger <barbara.brugger@qualiflex.solutions>
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-for-system-namespaces # Zugriffe aus system namespaces erlauben
  namespace: website
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
